# swiftcpp

./: CMakeLists.txt  Package.swift  build.sh
Sources/cpplib/: cpplib.cpp
Sources/cpplib/include/: cpplib.h
Sources/cwrapper/: cwrapper.cpp
Sources/cwrapper/include/: cwrapper.h
cpp-exec/: main.cpp
swift-exec/: main.swift
